fix: widget vs gallery z-index

--- a/app/stylesheets/app.sass
+++ b/app/stylesheets/app.sass
@@ -3,6 +3,9 @@
   height: 100px
 
 // Gallety
+.blueimp-gallery
+  z-index: 999 !important
+
 .blueimp-gallery > .description
   position: absolute
   top: 30px
